# ComfyUI_IPAdapter_plus

./: .gitignore  CrossAttentionPatch.py  IPAdapterPlus.py  IPAdapter_workflow-sdxl_vit-h.json  IPAdapter_workflow.json  NODES.md  Plus_workflow.json  README.md  __init__.py  image_proj_models.py  pyproject.toml  requirements.txt  utils.py
.github/: FUNDING.yml
docs/: installation.md  user-guide.md
examples/: FaceID_Plus.json  FaceID_Plus_v2.json  FaceID_basic.json  FaceID_enhanced.json  FaceID_portrait.json  IPAdapter_2_masks.json  IPAdapter_Canny.json  IPAdapter_FaceIDv2_Kolors.json  IPAdapter_batch_images.json  IPAdapter_face.json  IPAdapter_inpaint.json  IPAdapter_mask.json  IPAdapter_prepped.json  IPAdapter_sdxl_vit-h.json  IPAdapter_simple.json  IPAdapter_tiled.json  IPAdapter_weight_types.json  IPAdapter_weighted.json  face.json  inpainting.json  ipadapter_advanced.json  ipadapter_clipvision_enhancer.json  ipadapter_combine_embeds.json  ipadapter_cosxl_edit.json  ipadapter_faceid.json  ipadapter_faceid_batch.json  ipadapter_ideal_faceid_config.json  ipadapter_kolors.json  ipadapter_negative_image.json  ipadapter_noise_injection.json  ipadapter_portrait.json  ipadapter_precise_composition.json  ipadapter_precise_weight_type.json  ipadapter_regional_conditioning.json  ipadapter_style_composition.json  ipadapter_tiled.json  ipadapter_weight_types.json  ipadapter_weighted_embeds.json  ipadapter_weights.json
